update swagger schema and filters
